<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- Register progress -->
    <ProgressBar
        android:id="@+id/prgRegister"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:indeterminate="true"
        android:visibility="gone" />


    <ScrollView
        android:id="@+id/register_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:src="@drawable/sym_logo" />

            <LinearLayout
                android:id="@+id/frmProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <AutoCompleteTextView
                    android:id="@+id/txtRegUsername"
                    android:layout_width="@dimen/activity_ui_items"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/prompt_username"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="16sp" />

                <AutoCompleteTextView
                    android:id="@+id/txtRegFirstName"
                    android:layout_width="@dimen/activity_ui_items"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/prompt_fname"
                    android:inputType="textCapWords"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="16sp" />

                <AutoCompleteTextView
                    android:id="@+id/txtRegLastName"
                    android:layout_width="@dimen/activity_ui_items"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/prompt_lname"
                    android:inputType="textCapWords"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="16sp" />

                <AutoCompleteTextView
                    android:id="@+id/txtRegCompanyName"
                    android:layout_width="@dimen/activity_ui_items"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/prompt_cname"
                    android:inputType="textCapWords"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="16sp" />

                <AutoCompleteTextView
                    android:id="@+id/txtRegMsisdn"
                    android:layout_width="@dimen/activity_ui_items"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/prompt_phone"
                    android:inputType="textPhonetic"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="16sp" />

                <AutoCompleteTextView
                    android:id="@+id/txtRegEmail"
                    android:layout_width="@dimen/activity_ui_items"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="@dimen/activity_ui_items"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/txtRegPin"
                        android:layout_width="@dimen/activity_half_ui_items"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:hint="@string/prompt_pin"
                        android:inputType="numberPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/txtRegRPin"
                        android:layout_width="@dimen/activity_half_ui_items"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:hint="@string/prompt_rpin"
                        android:inputType="numberPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textSize="16sp" />

                </LinearLayout>

                <Button
                    android:id="@+id/btnRegRegister"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="@dimen/activity_ui_items"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:text="@string/action_register"
                    android:textAllCaps="false"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>