<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context=".LoginActivity">

	<include
		android:id="@+id/tool_bar"
		layout="@layout/tool_bar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content" />

	<ScrollView
		android:id="@+id/login_form"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:fillViewport="false">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<ImageView
				android:layout_width="wrap_content"
				android:layout_height="fill_parent"
				android:layout_gravity="center_horizontal"
				android:layout_margin="15dp"
				android:src="@drawable/sym_logo" />

			<LinearLayout
				android:id="@+id/email_login_form"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">

				<!--<EditText-->
					<!--android:id="@+id/txtName"-->
					<!--android:layout_width="wrap_content"-->
					<!--android:layout_height="wrap_content"-->
					<!--android:layout_gravity="center"-->
					<!--android:drawableTop="@drawable/login"-->
					<!--android:inputType="none"-->
					<!--android:textColor="@color/colorAccent"-->
					<!--android:textIsSelectable="false"-->
					<!--android:visibility="visible" />-->

				<EditText
					android:id="@+id/edtUsername"
					android:layout_width="@dimen/activity_ui_items"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					android:gravity="center"
					android:drawableTop="@drawable/login"
					android:hint="@string/prompt_username"
					android:imeActionLabel="@string/action_login_short"
					android:imeOptions="actionUnspecified"
					android:inputType="text"
					android:maxLines="1"
					android:singleLine="true"
					android:textColor="@color/colorAccent"
					android:visibility="visible" />

				<EditText
					android:id="@+id/edtPin"
					android:layout_width="@dimen/activity_ui_items"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					android:gravity="center"
					android:hint="@string/prompt_pin"
					android:imeActionLabel="@string/action_login_short"
					android:imeOptions="actionUnspecified"
					android:inputType="numberPassword"
					android:maxLines="1"
					android:singleLine="true"
					android:textSize="16sp" />

				<Button
					android:id="@+id/btnLogin"
					style="@style/Widget.AppCompat.Button.Colored"
					android:backgroundTint="@color/colorPrimaryDark"
					android:layout_width="225dp"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					android:layout_marginTop="16dp"
					android:text="@string/action_login"
					android:textStyle="bold" />

				<Button
					android:id="@+id/btnRegister"
					style="@style/Widget.AppCompat.Button.Colored"
					android:layout_width="225dp"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					android:backgroundTint="@color/colorPrimary"
					android:text="@string/action_register" />

				<ImageView
					android:layout_width="@dimen/activity_ui_items"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					android:src="@drawable/facebook_login"
					android:layout_marginTop="5dp" />

				<ImageView
					android:layout_width="@dimen/activity_ui_items"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					android:src="@drawable/google_login"
					android:layout_marginTop="5dp" />

				<ImageView
					android:layout_width="@dimen/activity_ui_items"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					android:src="@drawable/twitter_login"
					android:layout_marginTop="5dp" />
			</LinearLayout>
		</LinearLayout>
	</ScrollView>

</LinearLayout>

