<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:activity=".MainActivity">

        <ScrollView
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/default_margin_space"
                android:layout_marginRight="@dimen/default_margin_space"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/vertical_space"
                    android:layout_marginTop="@dimen/vertical_space"
                    android:text="@string/label_transaction_details"
                    android:textSize="@dimen/title_heading_size" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/spnChooseCurrencyType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:labelFor="@string/label_currency_for_transaction"
                        android:layout_marginRight="@dimen/default_margin_space"
                        android:layout_marginEnd="@dimen/default_margin_space" />

                    <EditText
                        android:id="@+id/edtTransactionAmount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_transaction_amount"
                        android:inputType="numberDecimal" />

                </LinearLayout>

                <EditText
                    android:id="@+id/edtTransactionReference"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/vertical_space"
                    android:layout_marginTop="@dimen/vertical_space"
                    android:hint="@string/prompt_transaction_reference"
                    android:singleLine="true" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnStartSwipe"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:backgroundTint="@color/colorPrimaryDark"
                        android:text="@string/action_start_swipe"
                        android:textAllCaps="false"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btnCancelTrans"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:backgroundTint="@color/colorPrimaryDark"
                        android:text="@string/action_cancel"
                        android:visibility="gone" />

                </LinearLayout>

                <ProgressBar
                    android:id="@+id/prbScanning"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:visibility="gone" />

            </LinearLayout>

        </ScrollView>

    </android.support.design.widget.CoordinatorLayout>
</RelativeLayout>