<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CashoutActivity">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/default_margin_space"
                android:layout_marginRight="@dimen/default_margin_space"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/vertical_space"
                    android:layout_marginTop="@dimen/vertical_space"
                    android:text="@string/label_cashout_options"
                    android:textSize="@dimen/title_heading_size" />

                <TextView
                    android:id="@+id/txvCashoutAccountType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimary"
                    android:gravity="center_horizontal"
                    android:lineSpacingExtra="8sp"
                    android:singleLine="false"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txvCashoutAccountDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimary"
                    android:gravity="center_horizontal"
                    android:lineSpacingExtra="8sp"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_green_dark"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/spnChooseCurrencyType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:labelFor="@string/label_currency_for_transaction"
                        android:layout_marginRight="@dimen/default_margin_space"
                        android:layout_marginEnd="@dimen/default_margin_space" />

                    <EditText
                        android:id="@+id/edtCashoutAmount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_transaction_amount"
                        android:inputType="numberDecimal" />

                </LinearLayout>

                <EditText
                    android:id="@+id/edtCashoutReference"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/vertical_space"
                    android:layout_marginTop="@dimen/vertical_space"
                    android:hint="@string/prompt_cashout_reference"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/edtCashoutPin"
                    android:layout_width="@dimen/activity_half_ui_items"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/vertical_space"
                    android:layout_marginTop="@dimen/vertical_space"
                    android:hint="@string/prompt_sym_pin"
                    android:layout_gravity="center_horizontal"
                    android:inputType="numberPassword"
                    android:singleLine="true" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnCashout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:backgroundTint="@color/colorPrimaryDark"
                        android:text="@string/action_cashout"
                        android:textAllCaps="false"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

</LinearLayout>